dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-1
spec:
  selector:
    matchLabels:
      app: whoami-1
  replicas: 1
  template:
    metadata:
      labels:
        app: whoami-1
    spec:
      containers:
        - name: whoami-1
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
