dev/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http-redirect-ingressroute
  namespace: whoami-1-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/x`)
      kind: Rule
      services:
        - name: whoami-1
          port: web
      middlewares:
        - name: x-stripprefix
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: x-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /x
